rails-structured-logging/infra/terraform/modules/security_group/app.tf
resource "aws_security_group" "app" {
  name   = "${local.base_name}-app"
  vpc_id = local.vpc.id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.base_name}:sg:app"
    App  = local.app
    Env  = local.env
  }
}
