rails-structured-logging/infra/terraform/modules/security_group/alb.tf
resource "aws_security_group" "alb" {
  name   = "${local.base_name}-alb"
  vpc_id = local.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.base_name}:sg:alb"
    App  = local.app
    Env  = local.env
  }
}
