rails-structured-logging/infra/terraform/modules/security_group/app_task.tf
resource "aws_security_group" "app_task" {
  name   = "${local.base_name}-app-task"
  vpc_id = local.vpc.id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  ingress {
    from_port       = 32768
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.base_name}:sg:app_task"
    App  = local.app
    Env  = local.env
  }
}
